# OpenGLSample

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Temp.txt  main_activity.cpp  native-lib.cpp
app/src/main/cpp/engine/: Engine.cpp  Engine.h
app/src/main/cpp/util/: Log.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
gvrsample/: CMakeLists.txt  build.gradle
gvrsample/src/androidTest/java/com/mike/gvr/sample/: ExampleInstrumentedTest.kt
gvrsample/src/main/: AndroidManifest.xml
gvrsample/src/main/assets/shader/: triangle_f.glsl  triangle_v.glsl
gvrsample/src/main/cpp/: native-lib.cpp
gvrsample/src/main/cpp/engine/: Engine.cpp  Engine.h  Object.cpp  Object.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
gvrsample/src/main/cpp/objects/: Object.cpp  Object.h
gvrsample/src/main/cpp/objects/shape/: Shape.cpp  Shape.h
gvrsample/src/main/cpp/objects/shape/square/: Square.cpp  Square.h
gvrsample/src/main/cpp/objects/shape/triangle/: Triangle.cpp  Triangle.h
gvrsample/src/main/cpp/util/: GLHelper.cpp  GLHelper.h  Math.cpp  Math.h
gvrsample/src/main/cpp/util/asset/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h
gvrsample/src/main/cpp/util/soil/: SOIL.c  SOIL.h
gvrsample/src/main/java/com/mike/gvr/sample/: MainActivity.kt
gvrsample/src/main/java/com/mike/gvr/sample/util/: GvrHelper.kt
gvrsample/src/main/res/values/: strings.xml
gvrsample/src/test/java/com/mike/gvr/sample/: ExampleUnitTest.kt
nativeapp/: build.gradle
othersample/: build.gradle  google-services.json
othersample/src/androidTest/java/com/mike/sample/: ExampleInstrumentedTest.kt
othersample/src/main/: AndroidManifest.xml
othersample/src/main/java/com/mike/sample/: MainActivity.kt
othersample/src/main/java/com/mike/sample/algorithm/: MD5.kt
othersample/src/main/java/com/mike/sample/util/: Common.kt  Encrypt.kt
othersample/src/main/res/layout/: activity_main.xml  content_main.xml
othersample/src/main/res/menu/: menu_main.xml
othersample/src/main/res/values/: strings.xml
othersample/src/test/java/com/mike/sample/: ExampleUnitTest.kt
res/: Cube.cpp  Cube.h
res/shader/: f_light.glsl  fss.glsl  vss.glsl
sdk-simplevideowidget/: build.gradle
sdk-videoplayer/: build.gradle
src/: GLHelper.cpp  GLHelper.h  GLProgram.cpp  GLProgram.h  main.cpp
